--- a/source/_assets/scss/components/_gallery.scss
+++ b/source/_assets/scss/components/_gallery.scss
@@ -1,7 +1,7 @@
-.gallery {
-  &__row {}
+// .gallery {
+  // &__row {}
 
-  &__column {}
+  // &__column {}
 
-  &__image-link {}
-}
+  // &__image-link {}
+// }
