--- a/source/_assets/scss/components/_footer.scss
+++ b/source/_assets/scss/components/_footer.scss
@@ -11,7 +11,7 @@ $footer-disclaimer-colour: transparentize($footer-colour, .6);
   width: 100%;
 
   &__logo {
-    @include radial-gradient(rgba(0, 0, 0, .2), transparent);
+    @include radial-gradient($trans-black-25, transparent);
 
     display: block;
     height: $footer-logo-width + 5rem;
