:art: Started a style guide.

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -21,6 +21,7 @@ $large-screen: 50rem;
 @import 'components/pagination';
 @import 'components/read-next';
 @import 'components/responsive-elements';
+@import 'components/style-guide';
 @import 'components/tag-cloud';
 
 // Layouts
