:memo: Added a new bookmark.

--- a/source/_includes/c_header.html
+++ b/source/_includes/c_header.html
@@ -7,6 +7,8 @@
         </h1>
     </div>
 
+    {% comment %}
+    <!-- Disabling the header navigation. -->
     <div class="header__navigation">
         <nav class="navigation">
             <ul class="navigation__list navigation__list--show" id="js-navigation-list">
@@ -20,4 +22,5 @@
             </ul>
         </nav>
     </div>
+    {% endcomment %}
 </div>
